syntax = "proto3";

package com.github.ixtf.api.netifi.proto;
option java_package = "com.github.ixtf.api.netifi.proto";
option java_outer_classname = "Api";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service WSService {
  rpc FireSockJsEvent (ApiRequest) returns (google.protobuf.Empty) {
  }
}

message ApiRequest {
  map<string, string> headers = 1;
  bytes body = 2;
  map<string, string> pathParams = 3;
  map<string, string> queryParams = 4;
}

message ApiResponse {
  uint32 status = 1;
  map<string, string> headers = 2;
  bytes body = 3;
}
